# pe-protector

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  choco-packages.config  vcpkg.json
.github/workflows/: ci.yml
Compile/: CCompile.cpp  CCompile.h  CLexicalAnalizer.cpp  CLexicalAnalizer.h  CMakeLists.txt  Compile.vcxproj  main.cpp
LogLibrary/: CMakeLists.txt  LogLibrary.vcxproj
PeProtector/: CMakeLists.txt  ClientFile.cpp  ClientFile.h  Data.cpp  Data.h  Import.cpp  Import.h  Instruction.cpp  Instruction.h  InstructionModRM.cpp  InstructionModRM.h  Mutation.cpp  Mutation.h  Opcodes.cpp  Opcodes.h  PeHeader.cpp  PeHeader.h  PeProtector.rc  PeProtector.vcxproj  ProtectPe.cpp  Resources.h  main.cpp
Stub/: Stub.asm
Test/: CMakeLists.txt  ClientFileTest.cpp  CommandTest.cpp  CompileTest.cpp  DataTest.cpp  ImportTest.cpp  InstructionTest.cpp  LexicalAnalizerTest.cpp  MutationTest.cpp  PeHeaderTest.cpp  ProtectPeTest.cpp  ResourcesTest.cpp  Test.vcxproj  Test.vcxproj.filters
common/: CMakeLists.txt  SCommand.cpp  SCommand.h  Types.cpp  Types.h
compiler/: CCompile.cpp  CCompile.h  CLexicalAnalizer.cpp  CMakeLists.txt  Parser.cpp  Parser.h  main.cpp
data/: pe-protector-stub.asm
examples/: CMakeLists.txt
log/: CLog.cpp  CLog.h  CMakeLists.txt
pe-protector/: CMakeLists.txt  ClientFile.cpp  ClientFile.h  Data.cpp  Data.h  Import.cpp  Import.h  Instruction.cpp  Instruction.h  InstructionModRM.cpp  InstructionModRM.h  Mutation.cpp  Mutation.h  Opcodes.cpp  Opcodes.h  PeHeader.cpp  PeHeader.h  ProtectPe.cpp  ProtectPe.h  Resources.cpp  Resources.h  main.cpp  pe-protector.rc  resource.h
scripts/: bootstrap-packages.sh
test/: CMakeLists.txt  ClientFileTest.cpp  CommandTest.cpp  CompileTest.cpp  DataTest.cpp  ImportTest.cpp  InstructionTest.cpp  LexicalAnalizerTest.cpp  MutationTest.cpp  ParserTest.cpp  PeHeaderTest.cpp  ProtectPeTest.cpp  ResourcesTest.cpp
